--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "better-sqlite3": "^9.6.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.30.10",
-    "electron-store": "^9.0.0",
     "electron-updater": "^6.1.7",
     "framer-motion": "^11.1.7",
     "react-dnd": "^16.0.1",
@@ -65,5 +64,9 @@
     "tailwindcss": "^3.4.3",
     "typescript": "^5.3.3",
     "vite": "^5.0.12"
+  },
+  "engines": {
+    "node": "20",
+    "pnpm": "9"
   }
 }
