--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "o-color",
   "version": "0.0.1",
-  "description": "An Electron application with React and TypeScript",
-  "main": "./out/main/index.js",
-  "author": "example.com",
-  "homepage": "https://electron-vite.org",
+  "description": "给你点颜色看看",
+  "main": "dist/main/entrypoint.js",
+  "author": "owocc",
+  "homepage": "https://github.com/owocc/color-desktop",
   "scripts": {
     "format": "prettier --write .",
     "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
@@ -14,11 +14,13 @@
     "start": "electron-vite preview",
     "dev": "electron-vite dev --watch",
     "build": "npm run typecheck && electron-vite build",
+    "build:nocheck": "electron-vite build",
     "postinstall": "electron-builder install-app-deps",
     "build:unpack": "npm run build && electron-builder --dir",
     "build:win": "npm run build && electron-builder --win",
     "build:mac": "electron-vite build && electron-builder --mac",
-    "build:linux": "electron-vite build && electron-builder --linux"
+    "build:linux": "electron-vite build && electron-builder --linux",
+    "db:generate": "npx drizzle-kit generate:sqlite"
   },
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.0",
@@ -29,6 +31,8 @@
     "drizzle-orm": "^0.30.10",
     "electron-updater": "^6.1.7",
     "framer-motion": "^11.1.7",
+    "pino": "^9.0.0",
+    "pino-pretty": "^11.0.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-icons": "^5.2.0",
@@ -39,6 +43,7 @@
     "@electron-toolkit/eslint-config-ts": "^1.0.1",
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@swc/core": "^1.4.17",
+    "@types/better-sqlite3": "^7.6.10",
     "@types/node": "^18.19.9",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
