--- a/package.json
+++ b/package.json
@@ -73,5 +73,6 @@
   "engines": {
     "node": "20",
     "pnpm": "9"
-  }
+  },
+  "packageManager": "pnpm@9.0.6+sha256.0624e30eff866cdeb363b15061bdb7fd9425b17bc1bb42c22f5f4efdea21f6b3"
 }
