--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dev": "electron-vite dev --watch",
     "build": "npm run typecheck && electron-vite build",
     "build:nocheck": "electron-vite build",
+    "build:win-nocheck":"electron-builder --win",
     "postinstall": "electron-builder install-app-deps",
     "build:unpack": "npm run build && electron-builder --dir",
     "build:win": "npm run build && electron-builder --win",
