--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "dev": "electron-vite dev --watch",
     "build": "npm run typecheck && electron-vite build",
     "build:nocheck": "electron-vite build",
-    "build:win-nocheck":"electron-builder --win",
+    "build:win-nocheck": "electron-builder --win",
     "postinstall": "electron-builder install-app-deps",
     "build:unpack": "npm run build && electron-builder --dir",
     "build:win": "npm run build && electron-builder --win",
     "build:mac": "electron-vite build && electron-builder --mac",
-    "build:linux": "electron-vite build && electron-builder --linux",
+    "build:linux": "electron-vite build:nocheck && electron-builder --linux",
     "db:generate": "npx drizzle-kit generate:sqlite"
   },
   "dependencies": {
@@ -34,10 +34,12 @@
     "framer-motion": "^11.1.7",
     "pino": "^9.0.0",
     "pino-pretty": "^11.0.0",
+    "react-aria-components": "^1.2.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-icons": "^5.2.0",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "tailwind-variants": "^0.2.1"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^2.0.0",
@@ -59,8 +61,6 @@
     "electron-vite": "^2.0.0",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
-    "flowbite": "^2.3.0",
-    "flowbite-react": "^0.9.0",
     "postcss": "^8.4.38",
     "prettier": "^3.2.4",
     "react": "^18.2.0",
@@ -74,6 +74,5 @@
   "engines": {
     "node": "20",
     "pnpm": "9"
-  },
-  "packageManager": "pnpm@9.0.6+sha256.0624e30eff866cdeb363b15061bdb7fd9425b17bc1bb42c22f5f4efdea21f6b3"
+  }
 }
