--- a/package.json
+++ b/package.json
@@ -1,78 +1,16 @@
 {
-  "name": "o-color",
+  "name": "color",
   "version": "0.0.1",
-  "description": "给你点颜色看看",
-  "main": "dist/main/entrypoint.js",
-  "author": "owocc",
-  "homepage": "https://github.com/owocc/color-desktop",
+  "description": "",
+  "private": true,
   "scripts": {
-    "format": "prettier --write .",
-    "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
-    "typecheck:node": "tsc --noEmit -p tsconfig.node.json --composite false",
-    "typecheck:web": "tsc --noEmit -p tsconfig.web.json --composite false",
-    "typecheck": "npm run typecheck:node && npm run typecheck:web",
-    "start": "electron-vite preview",
-    "dev": "electron-vite dev --watch",
-    "build": "npm run typecheck && electron-vite build",
-    "build:nocheck": "electron-vite build",
-    "build:win-nocheck": "electron-builder --win",
-    "postinstall": "electron-builder install-app-deps",
-    "build:unpack": "npm run build && electron-builder --dir",
-    "build:win": "npm run build && electron-builder --win",
-    "build:mac": "electron-vite build && electron-builder --mac",
-    "build:linux": "electron-vite build:nocheck && electron-builder --linux",
-    "db:generate": "npx drizzle-kit generate:sqlite"
+    "dev": "turbo run dev"
   },
-  "dependencies": {
-    "@electron-toolkit/preload": "^3.0.0",
-    "@electron-toolkit/utils": "^3.0.0",
-    "@reduxjs/toolkit": "^2.2.3",
-    "better-sqlite3": "^9.6.0",
-    "clsx": "^2.1.1",
-    "drizzle-orm": "^0.30.10",
-    "electron-updater": "^6.1.7",
-    "framer-motion": "^11.1.7",
-    "pino": "^9.0.0",
-    "pino-pretty": "^11.0.0",
-    "react-aria-components": "^1.2.1",
-    "react-dnd": "^16.0.1",
-    "react-dnd-html5-backend": "^16.0.1",
-    "react-icons": "^5.2.0",
-    "react-redux": "^9.1.2",
-    "tailwind-variants": "^0.2.1"
-  },
+  "keywords": [],
+  "author": "owocc",
+  "license": "MIT",
   "devDependencies": {
-    "@electron-toolkit/eslint-config-prettier": "^2.0.0",
-    "@electron-toolkit/eslint-config-ts": "^1.0.1",
-    "@electron-toolkit/tsconfig": "^1.0.1",
-    "@swc/core": "^1.4.17",
-    "@types/better-sqlite3": "^7.6.10",
-    "@types/node": "^18.19.9",
-    "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18",
-    "@types/react-router-dom": "^5.3.3",
-    "@vitejs/plugin-react": "^4.2.1",
-    "@vitejs/plugin-react-swc": "^3.6.0",
-    "autoprefixer": "^10.4.19",
-    "drizzle-kit": "^0.20.17",
-    "electron": "^28.2.0",
-    "electron-builder": "^24.9.1",
-    "electron-devtools-installer": "^3.2.0",
-    "electron-vite": "^2.0.0",
-    "eslint": "^8.56.0",
-    "eslint-plugin-react": "^7.33.2",
-    "postcss": "^8.4.38",
-    "prettier": "^3.2.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.0",
-    "tailwind-scrollbar": "^3.1.0",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.12"
+    "turbo": "latest"
   },
-  "engines": {
-    "node": "20",
-    "pnpm": "9"
-  }
+  "packageManager": "pnpm@9.1.1"
 }
