feat: 项目搭建中，（yak shaving...)

--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -1,12 +1,19 @@
 {
-  "name": "color-docs",
+  "name": "@chameleon/docs",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": ""
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "astro": "^4.12.0"
+  }
 }
