--- a/apps/electron/package.json
+++ b/apps/electron/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "color-electron",
+  "name": "@chameleon/electron",
   "version": "0.0.1",
   "description": "给你点颜色看看",
   "main": "dist/main/entrypoint.js",
@@ -40,7 +40,8 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-icons": "^5.2.0",
     "react-redux": "^9.1.2",
-    "tailwind-variants": "^0.2.1"
+    "tailwind-variants": "^0.2.1",
+    "@chameleon/macos":"workspace:*"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^2.0.0",
