--- a/apps/electron/package.json
+++ b/apps/electron/package.json
@@ -1,77 +1,62 @@
 {
   "name": "@chameleon/electron",
   "version": "0.0.1",
-  "description": "给你点颜色看看",
+  "description": "Color",
   "main": "dist/main/entrypoint.js",
   "author": "owocc",
-  "private":true,
-  "homepage": "https://github.com/owocc/color-desktop",
+  "private": true,
+  "homepage": "https://github.com/owocc/chameleon",
   "scripts": {
     "format": "prettier --write .",
     "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
-    "typecheck:node": "tsc --noEmit -p tsconfig.node.json --composite false",
-    "typecheck:web": "tsc --noEmit -p tsconfig.web.json --composite false",
-    "typecheck": "npm run typecheck:node && npm run typecheck:web",
     "start": "electron-vite preview",
     "dev": "electron-vite dev --watch",
     "build": "npm run typecheck && electron-vite build",
-    "build:nocheck": "electron-vite build",
-    "build:win-nocheck": "electron-builder --win",
-    "postinstall": "electron-builder install-app-deps",
-    "build:unpack": "npm run build && electron-builder --dir",
-    "build:win": "npm run build && electron-builder --win",
-    "build:mac": "electron-vite build && electron-builder --mac",
-    "build:linux": "electron-vite build:nocheck && electron-builder --linux",
-    "db:generate": "npx drizzle-kit generate:sqlite"
+    "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
-    "@electron-toolkit/preload": "^3.0.0",
+    "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^3.0.0",
-    "@reduxjs/toolkit": "^2.2.3",
-    "better-sqlite3": "^9.6.0",
+    "@reduxjs/toolkit": "^2.2.7",
     "clsx": "^2.1.1",
-    "drizzle-orm": "^0.30.10",
-    "electron-updater": "^6.1.7",
-    "framer-motion": "^11.1.7",
-    "pino": "^9.0.0",
-    "pino-pretty": "^11.0.0",
-    "react-aria-components": "^1.2.1",
+    "electron-updater": "^6.3.4",
+    "framer-motion": "^11.5.4",
+    "pino": "^9.4.0",
+    "pino-pretty": "^11.2.2",
+    "react-aria-components": "^1.3.3",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-icons": "^5.2.0",
+    "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
-    "tailwind-variants": "^0.2.1",
-    "@chameleon/macos":"workspace:*"
+    "tailwind-variants": "^0.2.1"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^2.0.0",
     "@electron-toolkit/eslint-config-ts": "^1.0.1",
     "@electron-toolkit/tsconfig": "^1.0.1",
-    "@swc/core": "^1.4.17",
-    "@types/better-sqlite3": "^7.6.10",
-    "@types/node": "^18.19.9",
-    "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18",
+    "@swc/core": "^1.7.24",
+    "@types/node": "^18.19.50",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
     "@types/react-router-dom": "^5.3.3",
-    "@vitejs/plugin-react": "^4.2.1",
-    "@vitejs/plugin-react-swc": "^3.6.0",
-    "autoprefixer": "^10.4.19",
-    "drizzle-kit": "^0.20.17",
-    "electron": "^28.2.0",
-    "electron-builder": "^24.9.1",
+    "@vitejs/plugin-react": "^4.3.1",
+    "@vitejs/plugin-react-swc": "^3.7.0",
+    "autoprefixer": "^10.4.20",
+    "electron": "^32.0.2",
+    "electron-builder": "^25.0.5",
     "electron-devtools-installer": "^3.2.0",
-    "electron-vite": "^2.0.0",
-    "eslint": "^8.56.0",
-    "eslint-plugin-react": "^7.33.2",
-    "postcss": "^8.4.38",
-    "prettier": "^3.2.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.0",
+    "electron-vite": "^2.3.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.35.2",
+    "postcss": "^8.4.45",
+    "prettier": "^3.3.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.1",
     "tailwind-scrollbar": "^3.1.0",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.12"
+    "tailwindcss": "^3.4.10",
+    "typescript": "^5.5.4",
+    "vite": "^5.4.3"
   },
   "engines": {
     "node": "20",
