--- a/apps/electron/package.json
+++ b/apps/electron/package.json
@@ -15,44 +15,37 @@
     "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
+    "@chameleon-shared/ui": "workspace:*",
+    "@chameleon/macos": "workspace:*",
+    "@chameleon/lint": "workspace:*",
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^3.0.0",
     "@reduxjs/toolkit": "^2.2.7",
-    "clsx": "^2.1.1",
+    "better-sqlite3": "^11.2.1",
+    "drizzle-orm": "^0.33.0",
     "electron-updater": "^6.3.4",
-    "framer-motion": "^11.5.4",
     "pino": "^9.4.0",
     "pino-pretty": "^11.2.2",
-    "react-aria-components": "^1.3.3",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-icons": "^5.3.0",
-    "react-redux": "^9.1.2",
-    "tailwind-variants": "^0.2.1"
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^2.0.0",
     "@electron-toolkit/eslint-config-ts": "^1.0.1",
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@swc/core": "^1.7.24",
+    "@types/better-sqlite3": "^7.6.11",
     "@types/node": "^18.19.50",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
-    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.3.1",
     "@vitejs/plugin-react-swc": "^3.7.0",
     "autoprefixer": "^10.4.20",
+    "drizzle-kit": "^0.24.2",
     "electron": "^32.0.2",
     "electron-builder": "^25.0.5",
     "electron-devtools-installer": "^3.2.0",
     "electron-vite": "^2.3.0",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.35.2",
     "postcss": "^8.4.45",
-    "prettier": "^3.3.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.1",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4",
