--- a/packages/lint/package.json
+++ b/packages/lint/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "@chameleon/macos",
+  "name": "@chameleon/lint",
   "version": "0.0.1",
-  "description": "",
-  "main": "src/index.ts",
+  "description": "统一的格式化配置",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@chameleon-shared/ui": "workspace:*"
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.35.2",
+    "prettier": "^3.3.3"
   }
 }
