--- a/packages/shared/app/package.json
+++ b/packages/shared/app/package.json
@@ -1,15 +1,12 @@
 {
-  "name": "@chameleon/macos",
+  "name": "@chameleon-shared/app",
   "version": "0.0.1",
-  "description": "",
-  "main": "src/index.ts",
+  "description": "application use",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "@chameleon-shared/ui": "workspace:*"
-  }
+  "dependencies": {}
 }
